# BenchSight

./: .gitignore  BenchSight_Project_Report_Template_FINAL.docx  README.md
docs/: architecture.md  demo-flow.md  deployment.md  execution-pipeline.md  local-development.md  profiling.md  resume-bullets.md  workloads.md
output/doc/: BenchSight_Presentation_Notes.docx  BenchSight_Project_Report_Reframed.docx  ~$nchSight_Project_Report_Reframed.docx
presentation/: potential_questions.md  project_flow.html  quick_learn.md  slide_content.md
profiling/: README.md
profiling/requests/: conv2d_cublas.json  gemm_baseline.json  gemm_cublas.json  gemm_optimized.json  reduction_baseline.json  reduction_cublas.json  reduction_optimized.json  softmax_cudnn.json  vector_add_cublas.json
scripts/: generate_benchsight_docs.py
simple_dashboard/: README.md  streamlit_app.py
simple_dashboard/.streamlit/: config.toml
simple_dashboard/results/: sample_conv2d_baseline.json  sample_conv2d_cublas.json  sample_conv2d_optimized.json  sample_gemm_baseline.json  sample_gemm_cublas.json  sample_gemm_optimized.json  sample_reduction_baseline.json  sample_reduction_cublas.json  sample_reduction_optimized.json  sample_softmax_baseline.json  (+5 more)
workers/cuda-benchmarks/: CMakeLists.txt  README.md
workers/cuda-benchmarks/include/: benchmark_harness.cuh  cublas_utils.hpp  cudnn_utils.hpp  json_contract.hpp  parameter_utils.hpp  result_utils.hpp  stats.hpp  workload_request.hpp  workloads.hpp
workers/cuda-benchmarks/src/: conv2d.cu  gemm.cu  main.cpp  reduction.cu  softmax.cu  vector_add.cu
